--- a/Web1.html
+++ b/Web1.html
@@ -14,6 +14,6 @@
   </ol>
   <h2>황소윤이 대박 짱인 이유</h2>
   다 필요없고 <a href="https://youtu.be/EwycjEpyqtk" target="_blank" title="이성애 치료 영상"><u>우리집</u></a> 영상을 봐라. <strong>그래서 언니 집이 어디에요?</strong><p>
-  <img src="황소윤_우리집.jpg" width="700">
+  <img src="황소윤_우리집.png" width="700">
 </body>
 </html>
