--- a/Web1.html
+++ b/Web1.html
@@ -13,7 +13,7 @@
     <a href="짱3.html"><li>기절시켜 드립니다</li></a>
   </ol>
   <h2>황소윤이 대박 짱인 이유</h2>
-  다 필요없고 <a href="https://youtu.be/EwycjEpyqtk" target="_blank" title="이성애 치료 영상"><u>우리집</u></a> 영상을 봐라. <strong>그래서 언니 집이 어디에요?</strong><p>
+  다 필요없고 <a href="https://youtu.be/EwycjEpyqtk" target="_blank" title="이성애 치료 영상"><strong><u>우리집</u></strong></a> 영상을 봐라. 그래서 언니 집이 어디에요?<p>
   <img src="황소윤_우리집.png" width="700">
 </body>
 </html>
