--- a/짱3.html
+++ b/짱3.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
   <head>
-    <title>황소윤이 짱인 이유 3</title>
+    <title>황소윤이 짱인 이유 953864616846</title>
     <meta charset="utf-8">
   </head>
 
   <body>
-    황소윤이 짱인 이유 953864616846
+    그리고 황소윤이 짱인 이유 953864616846
   </body>
 </html>
