--- a/Web1.html
+++ b/Web1.html
@@ -6,14 +6,14 @@
 </head>
 
 <body>
-  <h1><a href="황소윤 짱.html">음악의 신 황소윤</a></h1>
+  <h1>음악의 신 황소윤</h1>
   <ol>
-    <a href="짱1.html"><li>기절할 만큼 멋진</li></a>
-    <a href="짱2.html"><li>황소윤 보고 기절 안 하면</li></a>
-    <a href="짱3.html"><li>기절시켜 드립니다</li></a>
+    <a href="https://www.instagram.com/sleeep__sheeep/" title="공식 인스타그램"><li>인스타그램</li></a>
+    <a href="https://www.youtube.com/watch?v=dXrvDa7kXlg" title="이성애 치료 영상"><li>개오지는 파도 직캠</li></a>
+    <a href="https://www.youtube.com/watch?v=EwycjEpyqtk&feature=youtu.be" title="이성애 치료 영상2"><li>개오지는 우리집 커버</li></a>
   </ol>
-  <h2>황소윤이 대박 짱인 이유</h2>
-  다 필요없고 <a href="https://youtu.be/EwycjEpyqtk" target="_blank" title="이성애 치료 영상"><strong><u>우리집</u></strong></a> 영상을 봐라. 그래서 언니 집이 어디에요?<p>
-  <img src="황소윤_우리집.png" width="700">
+  <h2><a href="http://ko.womwiki0308.wikidok.net/wp-d/5e75d3d4e9160b6905dfc76c/View">황소윤 아세요?</a></h2>
+  기절할 만큼 멋진 황소윤 보고 기절 안 하면 기절시켜 드립니다<p>
+  <img src="파도직캠.jpg" width="700">
 </body>
 </html>
